--- a/Homework2/Homework2.html
+++ b/Homework2/Homework2.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Homework2</title>
-    <link rel="stylesheet" href="tablestyle.css">
+    <link rel="stylesheet" href="Homework2.css">
 </head>
 <body>
 
 
 <h2>Homework2</h2>
-
 
 <table style="width:66%">
     <tr>
