--- a/Homework5/Homework5.html
+++ b/Homework5/Homework5.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="Homework5.css">
 </head>
 <body>
+<div>
 <div class="header">
     <h1>City Gallery</h1>
 </div>
@@ -16,15 +17,9 @@
         <ol class="demo">
             <li>
 
-                <a href="https://en.wikipedia.org/wiki/London">
-                    <div>London</div>
-                </a>
-                <a href="https://en.wikipedia.org/wiki/Paris">
-                    <div>Paris</div>
-                </a>
-                <a href="https://en.wikipedia.org/wiki/Tokyo">
-                    <div>Tokyo</div>
-                </a>
+                <a href="https://en.wikipedia.org/wiki/London">London</a>
+                <a href="https://en.wikipedia.org/wiki/Paris">Paris</a>
+                <a href="https://en.wikipedia.org/wiki/Tokyo">Tokyo</a>
             </li>
         </ol>
     </div>
@@ -37,6 +32,7 @@
             desimtmetyje, kai buvo isleisti Letraset lapai su Lorem Ipsum istraukomis, o veliau -leidybine sistema
             AldusPageMaker, kurioje buvo ir Lorem Ipsum versija.</p>
     </div>
+</div>
 </div>
 <footer style="background: black; color: white;width: 700px;text-align: center;padding: 5px">
     <p>Copyright W3schools.com</p>
